--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -530,6 +530,118 @@ hr {
   }
 
   @media all and (min-width: 1024px) and (max-width: 1440px) {
+
+    .nav-bar {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .brand {
+        display: flex;
+        justify-content: center;
+        margin: 30px 10px;
+        /* width: 800px; */
+    }
+
+    .brand > ul {
+        display: flex;
+        margin-left: 50px;  
+    }
+
+    li > a {
+        text-decoration: none;
+        color: white;
+        font-size: 1em;
+        margin: 10px 10px;
+    }
+
+    .btn {
+        display: flex;
+        justify-content: center;
+        width: 400px;
+    }
+
+    .btn-menu {
+        display: none;
+    }
+
+    .btn > ul {
+        display: flex;
+    }
+
+    .btn-try {
+        background-color: white;
+        color: #540B51;
+        padding: 20px 15px;
+    }
+
+    #header {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .header {
+        display: flex;
+        align-items: flex-start;
+        margin: 20px 20px;
+    }
+
+    .header-img {
+        display: flex;
+        align-items: center;
+    }
+
+    .logos {
+        margin: 50px 50px;
+    }
+
+    .child-section {
+        display: flex;
+        background-color: #F3EAE2;
+        align-items: center;
+    }
+
+    .img-topic {
+        height: 450px;
+        margin: 0 20px 0 0;
+    }
+
+    .container-cta-btn {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .cta-btn-meet {
+        padding: 20px 30px;
+    }
+
+    .list-cta {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .container-cta {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container-cta > button{
+        width: 300px;
+    }
+
+    .lista-row {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        font-size: 0.9em;
+    }
+
+    .social-media {
+        display: flex;
+        justify-content: flex-start;
+    }
     
   }
 
